--- a/FileCopy/FileCopy.csproj
+++ b/FileCopy/FileCopy.csproj
@@ -119,6 +119,7 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="FluentFtp.cs" />
+    <Compile Include="FolderCopy.cs" />
     <Compile Include="ftp.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
